--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <fe-app></fe-app>
 
   <script type="module" src="./src/fe-app.js"></script>
+  <script type ="module" src="src/Components/fe-header/fe-header.js"></script>
 </body>
 
 </html>
