Added toggle component

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
 <body>
   <fe-app></fe-app>
+    
 
   <script type="module" src="./src/fe-app.js"></script>
+    <script type="module" src="./src/Components/fe-lang-toggle/fe-lang-toggle.js"></script>
+   
 </body>
 
 </html>
